--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
   --priㅌmary: 74, 74, 74;
   --secondary: 107, 107, 107;
   --accent: 59, 130, 246;
+  --highlight-color: #3b82f6; /* 파란색 */
 }
 
 .theme-dark {
@@ -18,6 +19,7 @@
   --primary: 229, 229, 229;
   --secondary: 163, 163, 163;
   --accent: 96, 165, 250;
+  --highlight-color: #eab308; /* 노란색 */
 }
 
 .theme-light {
@@ -155,6 +157,11 @@ body {
 
 .glassmorphism-dark:hover {
   animation: sparkleDark 1.5s infinite ease-in-out;
+}
+
+.highlight-word {
+  color: var(--highlight-color);
+  font-weight: 500;
 }
 
 /* Custom styles for navigation */
