--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   /* 라이트 테마 기본 색상 */
   --background: 255, 255, 255;
   --foreground: 0, 0, 0;
-  --priㅌmary: 74, 74, 74;
+  --primary: 74, 74, 74;
   --secondary: 107, 107, 107;
   --accent: 59, 130, 246;
   --highlight-color: #096147; /* 파란색 */
