--- a/app/globals.css
+++ b/app/globals.css
@@ -143,7 +143,7 @@ body {
 }
 
 .glassmorphism-light:hover {
-  animation: sparkle 1.5s infinite ease-in-out;
+  /* animation: sparkle 1.5s infinite ease-in-out; */
 }
 
 .glassmorphism-dark {
@@ -156,7 +156,7 @@ body {
 }
 
 .glassmorphism-dark:hover {
-  animation: sparkleDark 1.5s infinite ease-in-out;
+  /* animation: sparkleDark 1.5s infinite ease-in-out; */
 }
 
 .highlight-word {
